[delivery2mavencentral] upgrade java to java 13 and maven to 3.6.3
Signed-off-by: FunThomas424242 (Thomas Schubert) <funthomas424242@gmail.com>